# PracticalHaskell

./: .gitignore  LICENSE  README.md  cabal.project  haskell-book.cabal  stack.yaml
.github/workflows/: build.yml
chapter2/: CHANGELOG.md  practical-chapter2.cabal
chapter2/src/Practical/Haskell/: DataTypes.hs  SimpleFunctions.hs
chapter2/test/: SimpleFunctionsTest.hs
chapter3/: CHANGELOG.md  LICENSE  practical-chapter3.cabal
chapter3/src/Practical/Haskell/: ParamPoly.hs
lib/Chapter2/: DataTypes.hs  SimpleFunctions.hs
