name:               practical-chapter2
version:            0.1.0.0
synopsis:           Chapter 2 of Practical Haskell by Alejandro Serrano Mena
homepage:           https://github.com/loglund/PracticalHaskell
license:            BSD3
license-file:       LICENSE
author:             Mikkel Højlund Larsen
maintainer:         mikkelhojlundgrontmij@gmail.com
copyright:          2023 Mikkel Højlund Larsen
category:           Learning
build-type:         Simple
extra-source-files: README.md, CHANGELOG.md
cabal-version:      >=1.10

library
  hs-source-dirs:   src

  exposed-modules:  Practical.Haskell.DataTypes
                    Practical.Haskell.SimpleFunctions

  build-depends:    base >= 4.5 && < 5

  default-language: Haskell2010

test-suite practical-chapter2-test
  type:             exitcode-stdio-1.0
  main-is:          Tasty.hs
  hs-source-dirs:   test
  other-modules:    SimpleFunctionsTest
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:  tasty
                  , tasty-discover
                  , tasty-hunit
                  , tasty-quickcheck
                  , QuickCheck
                  , HUnit
                  , base >= 4.5 && < 5
                  , practical-chapter2
  default-language: Haskell2010
  build-tool-depends:
                    tasty-discover:tasty-discover

