name:               practical-chapter3
version:            0.1.0.0
synopsis:           Chapter 3 of Practical Haskell by Alejandro Serrano Mena
homepage:           https://github.com/loglund/PracticalHaskell
license:            BSD3
license-file:       LICENSE
author:             Mikkel Højlund Larsen
maintainer:         mikkelhojlundgrontmij@gmail.com
copyright:          2023 Mikkel Højlund Larsen
category:           Learning
build-type:         Simple
extra-source-files: README.md, CHANGELOG.md
cabal-version:      >=1.10

library
  hs-source-dirs:   src

  exposed-modules:  Practical.Haskell.ParamPoly

  build-depends:    base >= 4.5 && < 5

  default-language: Haskell2010
